src/test/compile-fail/duplicate-name.rs
// error-pattern: duplicate value name: x

fn main() { let x = 10; let x: int = 20; }